--- a/libs/providers_info_lib/Cargo.toml
+++ b/libs/providers_info_lib/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2018"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
+futures = "0.3.5"
+tokio = {version = "1.7.1", features = ["macros"]}
 config_lib = { path = "../config_lib" }
 mongo_integration = { path = "../mongo_integration" }
 prints_lib = { path = "../prints_lib" }
