--- a/.env
+++ b/.env
@@ -9,25 +9,64 @@ POSTGRES_LOCAL_DOCKER_PASSWORD="example"
 ################################################################################
 # for tufa_backend
 
-#[github_authorization]
-GITHUB_NAME = "example"
-GITHUB_TOKEN = "example"
+GITHUB_NAME="example"
+GITHUB_TOKEN="example"
 
-#[reddit_authorization]
-REDDIT_USER_AGENT = "example"
-REDDIT_CLIENT_ID = "example"
-REDDIT_CLIENT_SECRET = "example"
-REDDIT_USERNAME = "example"
-REDDIT_PASSWORD = "example"
+REDDIT_USER_AGENT="example"
+REDDIT_CLIENT_ID="example"
+REDDIT_CLIENT_SECRET="example"
+REDDIT_USERNAME="example"
+REDDIT_PASSWORD="example"
 
-#[params]
-VEC_OF_PROVIDER_NAMES="[arxiv, biorxiv, github, habr, medrxiv, reddit, twitter]"
-#it can be only one of them: arxiv, biorxiv, github, habr, medrxiv, reddit, twitter - check project_constants.rs
 STARTING_CHECK_LINK="https://www.google.com/"
-USER_CREDENTIALS_DUMMY_HANDLE="example" #move it into project constants?
 WARNING_LOGS_DIRECTORY_NAME="warning_logs"
 UNHANDLED_SUCCESS_HANDLED_SUCCESS_ARE_THERE_ITEMS_INITIALIZED_POSTS_DIR="unhandled_success_handled_success_are_there_items_initialized_posts"
-# // pub const ERROR_LOGS_DIRECTORY_NAME: &str="error_logs
+
+PROVIDERS_DB_NAME_HANDLE="provider_links" # rename this into providers_...
+PROVIDERS_DB_COLLECTION_HANDLE_SECOND_PART="_link_parts" # rename this into providers_...
+PROVIDERS_DB_COLLECTION_DOCUMENT_FIELD_NAME_HANDLE="link_part" # rename this into providers_...
+PATH_TO_PROVIDER_LINK_PARTS_FOLDER="./providers_link_parts/"
+LOG_FILE_EXTENSION=".json" # rename this into log_...
+DB_PROVIDERS_LOGS_NAME_HANDLE="logs"
+DB_PROVIDERS_LOGS_COLLECTION_HANDLE_SECOND_PART="second_part"
+DB_PROVIDERS_LOGS_COLLECTION_DOCUMENT_FIELD_NAME_HANDLE="data"
+
+# url example MONGO_FIRST_HANDLE_URL_PART&MONGO_LOGIN&MONGO_SECOND_HANDLE_URL_PART&MONGO_PASSWORD&MONGO_THIRD_HANDLE_URL_PART&MONGO_IP&MONGO_FOURTH_HANDLE_URL_PART&MONGO_PORT&MONGO_IP&MONGO_FIFTH_HANDLE_URL_PART&MONGO_PARAMS
+
+MONGO_FIRST_HANDLE_URL_PART="mongodb://" #local "mongodb://" cloud "mongodb+srv://"
+MONGO_SECOND_HANDLE_URL_PART=":"  #local ":" cloud ":"
+MONGO_THIRD_HANDLE_URL_PART="@" #local "@" cloud "@"
+MONGO_FOURTH_HANDLE_URL_PART=":" #local ":" cloud ""
+MONGO_FIFTH_HANDLE_URL_PART="" #local "" cloud "/"
+
+MONGO_LOGIN="example"
+MONGO_PASSWORD="example"
+MONGO_IP="example"
+MONGO_PORT="example"
+MONGO_PARAMS="example"
+
+# example POSTGRES_FIRST_HANDLE_URL_PART&POSTGRES_LOGIN&POSTGRES_SECOND_HANDLE_URL_PART&POSTGRES_PASSWORD&POSTGRES_THIRD_HANDLE_URL_PART&POSTGRES_IP&POSTGRES_FOURTH_HANDLE_URL_PART&POSTGRES_DB
+
+POSTGRES_FIRST_HANDLE_URL_PART="postgres://" #local "postgres://" cloud "postgres://"
+POSTGRES_SECOND_HANDLE_URL_PART=":" #local ":" cloud ":"
+POSTGRES_THIRD_HANDLE_URL_PART="@" #local "@" cloud "@"
+POSTGRES_FOURTH_HANDLE_URL_PART=":" #local ":" cloud ""
+POSTGRES_FIFTH_HANDLE_URL_PART="/" #local "/" cloud "/"
+
+POSTGRES_LOGIN="example"
+POSTGRES_PASSWORD="example"
+POSTGRES_IP="example"
+POSTGRES_PORT="example"
+POSTGRES_DB="example"
+
+ARXIV_LINK="https://www.google.com/" # https://arxiv.org/   http://export.arxiv.org/rss/   http://export.arxiv.org/rss/astro-ph.CO
+BIORXIV_LINK="https://www.google.com/" # http://connect.biorxiv.org/
+GITHUB_LINK="https://github.com/"
+HABR_LINK="https://www.google.com/" # https://habr.com/ru/
+MEDRXIV_LINK="https://www.google.com/" # http://connect.medrxiv.org/
+REDDIT_LINK="https://www.reddit.com/"
+TWITTER_LINK="https://www.google.com/" # must be not only 1 str but many - twitter and many nitters
+
 ENABLE_PROVIDERS="true"
 ENABLE_CLEANING_WARNING_LOGS_DIRECTORY="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_IN_MONGO="true"
@@ -35,7 +74,6 @@ ENABLE_CLEANING_WARNING_LOGS_DB_COLLECTIONS_IN_MONGO="true"
 ENABLE_TIME_MEASUREMENT="true"
 ENABLE_PROVIDER_LINKS_LIMIT="true"
 ENABLE_COMMON_PROVIDERS_LINKS_LIMIT="true"
-COMMON_PROVIDERS_LINKS_LIMIT="30" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 ENABLE_RANDOMIZE_ORDER_FOR_PROVIDERS_LINK_PARTS_FOR_MONGO="true"
 ENABLE_PRINTS="true"
 ENABLE_ERROR_PRINTS="true"
@@ -57,22 +95,8 @@ ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_PRINTS_FOR_ALL_PROVIDERS="true"
 ENABLE_INFO_PRINTS_FOR_ALL_PROVIDERS="true"
 ENABLE_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER="false"
 ENABLE_WRITE_ERROR_LOGS_IN_MONGO="true"
-ENABLE_INITIALIZE_MONGO_WITH_PROVIDERS_LINK_PARTS="false"
+ENABLE_INITIALIZE_MONGO_WITH_PROVIDERS_LINK_PARTS="true"
 
-#[mongo_params]
-# url example MONGO_FIRST_HANDLE_URL_PART&MONGO_LOGIN&MONGO_SECOND_HANDLE_URL_PART&MONGO_PASSWORD&MONGO_THIRD_HANDLE_URL_PART&MONGO_IP&MONGO_FOURTH_HANDLE_URL_PART&MONGO_PORT&MONGO_IP&MONGO_FIFTH_HANDLE_URL_PART&MONGO_PARAMS
-PROVIDERS_DB_NAME_HANDLE="provider_links" # rename this into providers_...
-PROVIDERS_DB_COLLECTION_HANDLE_SECOND_PART="_link_parts" # rename this into providers_...
-PROVIDERS_DB_COLLECTION_DOCUMENT_FIELD_NAME_HANDLE="link_part" # rename this into providers_...
-# todo: move this into few diferent mongo objects
-PATH_TO_PROVIDER_LINK_PARTS_FOLDER="./providers_link_parts/"
-LOG_FILE_EXTENSION=".json" # rename this into log_...
-# todo: move this into few diferent mongo objects
-DB_PROVIDERS_LOGS_NAME_HANDLE="logs"
-DB_PROVIDERS_LOGS_COLLECTION_HANDLE_SECOND_PART="second_part"
-DB_PROVIDERS_LOGS_COLLECTION_DOCUMENT_FIELD_NAME_HANDLE="data"
-
-#[mongo_params.enable_initialize_mongo_with_providers_link_parts]
 ENABLE_INITIALIZE_MONGO_WITH_ARXIV_LINK_PARTS="true"
 ENABLE_INITIALIZE_MONGO_WITH_BIORXIV_LINK_PARTS="true"
 ENABLE_INITIALIZE_MONGO_WITH_GITHUB_LINK_PARTS="true"
@@ -81,68 +105,6 @@ ENABLE_INITIALIZE_MONGO_WITH_MEDRXIV_LINK_PARTS="true"
 ENABLE_INITIALIZE_MONGO_WITH_REDDIT_LINK_PARTS="true"
 ENABLE_INITIALIZE_MONGO_WITH_TWITTER_LINK_PARTS="true"
 
-#[mongo_params.mongo_url_parts] local 
-MONGO_FIRST_HANDLE_URL_PART="mongodb://"
-MONGO_SECOND_HANDLE_URL_PART=":"
-MONGO_THIRD_HANDLE_URL_PART="@"
-MONGO_FOURTH_HANDLE_URL_PART=":"
-MONGO_FIFTH_HANDLE_URL_PART=""
-
-#[mongo_params.mongo_url_parts] cloud 
-# MONGO_FIRST_HANDLE_URL_PART="mongodb+srv://"
-# MONGO_SECOND_HANDLE_URL_PART=":"
-# MONGO_THIRD_HANDLE_URL_PART="@"
-# MONGO_FOURTH_HANDLE_URL_PART=""
-# MONGO_FOURTH_HANDLE_URL_PART=""
-# MONGO_FIFTH_HANDLE_URL_PART="/"
-
-#[mongo_params.mongo_authorization] local
-MONGO_LOGIN = "example"
-MONGO_PASSWORD = "example"
-MONGO_IP = "example"
-MONGO_PORT = "example"
-MONGO_PARAMS = "example"
-
-#[mongo_params.mongo_authorization] cloud
-# MONGO_LOGIN = "example"
-# MONGO_PASSWORD = "example"
-# MONGO_IP = "example" #or is it more than cluster name?
-# MONGO_PORT = "example"
-# MONGO_PARAMS = "example"
-
-#[postgres_params]
-# example POSTGRES_FIRST_HANDLE_URL_PART&POSTGRES_LOGIN&POSTGRES_SECOND_HANDLE_URL_PART&POSTGRES_PASSWORD&POSTGRES_THIRD_HANDLE_URL_PART&POSTGRES_IP&POSTGRES_FOURTH_HANDLE_URL_PART&POSTGRES_DB
-
-#[postgres_params.postgres_url_parts] local
-# POSTGRES_FIRST_HANDLE_URL_PART="postgres://"
-# POSTGRES_SECOND_HANDLE_URL_PART=":"
-# POSTGRES_THIRD_HANDLE_URL_PART="@"
-# POSTGRES_FOURTH_HANDLE_URL_PART=":"
-# POSTGRES_FIFTH_HANDLE_URL_PART="/"
-
-#[postgres_params.postgres_url_parts] cloud
-POSTGRES_FIRST_HANDLE_URL_PART="postgres://"
-POSTGRES_SECOND_HANDLE_URL_PART=":"
-POSTGRES_THIRD_HANDLE_URL_PART="@"
-POSTGRES_FOURTH_HANDLE_URL_PART=""
-POSTGRES_FIFTH_HANDLE_URL_PART="/"
-
-#[postgres_params.postgres_authorization] local 
-# POSTGRES_LOGIN = "example"
-# POSTGRES_PASSWORD = "example"
-# # //POSTGRES_HOST_NAME
-# POSTGRES_IP = "example"
-# POSTGRES_PORT = "example"
-# POSTGRES_DB = "example"
-
-#[postgres_params.postgres_authorization] cloud 
-POSTGRES_LOGIN = "example"
-POSTGRES_PASSWORD = "example"
-POSTGRES_IP = "example"
-POSTGRES_PORT = "example"
-POSTGRES_DB = "example"
-
-#[enable_providers]
 ENABLE_ARXIV="false"
 ENABLE_BIORXIV="false"
 ENABLE_GITHUB="false"
@@ -151,16 +113,6 @@ ENABLE_MEDRXIV="false"
 ENABLE_REDDIT="false"
 ENABLE_TWITTER="true"
 
-#[providers_check_links]
-ARXIV_LINK="https://www.google.com/" # https://arxiv.org/   http://export.arxiv.org/rss/   http://export.arxiv.org/rss/astro-ph.CO
-BIORXIV_LINK="https://www.google.com/" # http://connect.biorxiv.org/
-GITHUB_LINK="https://github.com/"
-HABR_LINK="https://www.google.com/" # https://habr.com/ru/
-MEDRXIV_LINK="https://www.google.com/" # http://connect.medrxiv.org/
-REDDIT_LINK="https://www.reddit.com/"
-TWITTER_LINK="https://www.google.com/" # must be not only 1 str but many - twitter and many nitters
-
-#[enable_providers_prints]
 ENABLE_PRINTS_ARXIV="true"
 ENABLE_PRINTS_BIORXIV="true"
 ENABLE_PRINTS_GITHUB="true"
@@ -169,7 +121,6 @@ ENABLE_PRINTS_MEDRXIV="true"
 ENABLE_PRINTS_REDDIT="true"
 ENABLE_PRINTS_TWITTER="true"
 
-#[enable_warning_high_providers_prints]
 ENABLE_WARNING_HIGH_PRINTS_FOR_ARXIV="true"
 ENABLE_WARNING_HIGH_PRINTS_FOR_BIORXIV="true"
 ENABLE_WARNING_HIGH_PRINTS_FOR_GITHUB="true"
@@ -178,7 +129,6 @@ ENABLE_WARNING_HIGH_PRINTS_FOR_MEDRXIV="true"
 ENABLE_WARNING_HIGH_PRINTS_FOR_REDDIT="true"
 ENABLE_WARNING_HIGH_PRINTS_FOR_TWITTER="true"
 
-#[enable_warning_low_providers_prints]
 ENABLE_WARNING_LOW_PRINTS_FOR_ARXIV="true"
 ENABLE_WARNING_LOW_PRINTS_FOR_BIORXIV="true"
 ENABLE_WARNING_LOW_PRINTS_FOR_GITHUB="true"
@@ -187,7 +137,6 @@ ENABLE_WARNING_LOW_PRINTS_FOR_MEDRXIV="true"
 ENABLE_WARNING_LOW_PRINTS_FOR_REDDIT="true"
 ENABLE_WARNING_LOW_PRINTS_FOR_TWITTER="true"
 
-#[enable_error_providers_prints]
 ENABLE_ERROR_PRINTS_FOR_ARXIV="true"
 ENABLE_ERROR_PRINTS_FOR_BIORXIV="true"
 ENABLE_ERROR_PRINTS_FOR_GITHUB="true"
@@ -196,7 +145,6 @@ ENABLE_ERROR_PRINTS_FOR_MEDRXIV="true"
 ENABLE_ERROR_PRINTS_FOR_REDDIT="true"
 ENABLE_ERROR_PRINTS_FOR_TWITTER="true"
 
-#[enable_success_providers_prints]
 ENABLE_SUCCESS_PRINTS_FOR_ARXIV="true"
 ENABLE_SUCCESS_PRINTS_FOR_BIORXIV="true"
 ENABLE_SUCCESS_PRINTS_FOR_GITHUB="true"
@@ -205,7 +153,6 @@ ENABLE_SUCCESS_PRINTS_FOR_MEDRXIV="true"
 ENABLE_SUCCESS_PRINTS_FOR_REDDIT="true"
 ENABLE_SUCCESS_PRINTS_FOR_TWITTER="true"
 
-#[enable_partial_success_providers_prints]
 ENABLE_PARTIAL_SUCCESS_PRINTS_FOR_ARXIV="true"
 ENABLE_PARTIAL_SUCCESS_PRINTS_FOR_BIORXIV="true"
 ENABLE_PARTIAL_SUCCESS_PRINTS_FOR_GITHUB="true"
@@ -214,7 +161,6 @@ ENABLE_PARTIAL_SUCCESS_PRINTS_FOR_MEDRXIV="true"
 ENABLE_PARTIAL_SUCCESS_PRINTS_FOR_REDDIT="true"
 ENABLE_PARTIAL_SUCCESS_PRINTS_FOR_TWITTER="true"
 
-#[enable_providers_cleaning_warning_logs_directory]
 ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_FOR_ARXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_FOR_BIORXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_FOR_GITHUB="true"
@@ -223,7 +169,6 @@ ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_FOR_MEDRXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_FOR_REDDIT="true"
 ENABLE_CLEANING_WARNING_LOGS_DIRECTORY_FOR_TWITTER="true"
 
-#[enable_providers_cleaning_warning_logs_db_in_mongo]
 ENABLE_CLEANING_WARNING_LOGS_DB_IN_MONGO_FOR_ARXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_IN_MONGO_FOR_BIORXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_IN_MONGO_FOR_GITHUB="true"
@@ -232,7 +177,6 @@ ENABLE_CLEANING_WARNING_LOGS_DB_IN_MONGO_FOR_MEDRXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_IN_MONGO_FOR_REDDIT="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_IN_MONGO_FOR_TWITTER="true"
 
-#[enable_providers_cleaning_warning_logs_db_collections_in_mongo]
 ENABLE_CLEANING_WARNING_LOGS_DB_COLLECTIONS_IN_MONGO_FOR_ARXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_COLLECTIONS_IN_MONGO_FOR_BIORXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_COLLECTIONS_IN_MONGO_FOR_GITHUB="true"
@@ -241,7 +185,6 @@ ENABLE_CLEANING_WARNING_LOGS_DB_COLLECTIONS_IN_MONGO_FOR_MEDRXIV="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_COLLECTIONS_IN_MONGO_FOR_REDDIT="true"
 ENABLE_CLEANING_WARNING_LOGS_DB_COLLECTIONS_IN_MONGO_FOR_TWITTER="true"
 
-#[enable_providers_time_measurement]
 ENABLE_TIME_MEASUREMENT_FOR_ARXIV="true"
 ENABLE_TIME_MEASUREMENT_FOR_BIORXIV="true"
 ENABLE_TIME_MEASUREMENT_FOR_GITHUB="true"
@@ -250,7 +193,6 @@ ENABLE_TIME_MEASUREMENT_FOR_MEDRXIV="true"
 ENABLE_TIME_MEASUREMENT_FOR_REDDIT="true"
 ENABLE_TIME_MEASUREMENT_FOR_TWITTER="true"
 
-#[enable_providers_info]
 ENABLE_INFO_FOR_ARXIV="true"
 ENABLE_INFO_FOR_BIORXIV="true"
 ENABLE_INFO_FOR_GITHUB="true"
@@ -259,7 +201,6 @@ ENABLE_INFO_FOR_MEDRXIV="true"
 ENABLE_INFO_FOR_REDDIT="true"
 ENABLE_INFO_FOR_TWITTER="true"
 
-#[enable_providers_links_limits]
 ENABLE_LINKS_LIMIT_FOR_ARXIV="true"
 ENABLE_LINKS_LIMIT_FOR_BIORXIV="true"
 ENABLE_LINKS_LIMIT_FOR_GITHUB="true"
@@ -268,7 +209,6 @@ ENABLE_LINKS_LIMIT_FOR_MEDRXIV="true"
 ENABLE_LINKS_LIMIT_FOR_REDDIT="true"
 ENABLE_LINKS_LIMIT_FOR_TWITTER="true"
 
-#[enable_randomize_order_for_providers_link_parts_for_mongo]
 ENABLE_RANDOMIZE_ORDER_FOR_ARXIV_LINK_PARTS_FOR_MONGO="true"
 ENABLE_RANDOMIZE_ORDER_FOR_BIORXIV_LINK_PARTS_FOR_MONGO="true"
 ENABLE_RANDOMIZE_ORDER_FOR_GITHUB_LINK_PARTS_FOR_MONGO="true"
@@ -277,7 +217,8 @@ ENABLE_RANDOMIZE_ORDER_FOR_MEDRXIV_LINK_PARTS_FOR_MONGO="true"
 ENABLE_RANDOMIZE_ORDER_FOR_REDDIT_LINK_PARTS_FOR_MONGO="true"
 ENABLE_RANDOMIZE_ORDER_FOR_TWITTER_LINK_PARTS_FOR_MONGO="true"
 
-#[providers_links_limits]
+COMMON_PROVIDERS_LINKS_LIMIT="30" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+
 LINKS_LIMIT_FOR_ARXIV="10" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 LINKS_LIMIT_FOR_BIORXIV="10" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 LINKS_LIMIT_FOR_GITHUB="10" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
@@ -286,7 +227,6 @@ LINKS_LIMIT_FOR_MEDRXIV="10" # i64, but cannot be 0 or negative value (disable l
 LINKS_LIMIT_FOR_REDDIT="10" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 LINKS_LIMIT_FOR_TWITTER="10" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 
-#[print_colors]
 ERROR_RED="255" # u8
 ERROR_GREEN="0" # u8
 ERROR_BLUE="0" # u8
