--- a/.env
+++ b/.env
@@ -28,60 +28,7 @@ MONGO_PROVIDERS_LOGS_DB_NAME=""
 MONGO_PROVIDERS_LOGS_DB_COLLECTION_HANDLE_SECOND_PART=""
 MONGO_PROVIDERS_LOGS_DB_COLLECTION_DOCUMENT_FIELD_NAME_HANDLE=""
 
-IS_MONGO_INITIALIZATION_ENABLED="false"
-IS_MONGO_INITIALIZATION_ENABLED_PROVIDERS="false"
-IS_MONGO_INITIALIZATION_ENABLED_ARXIV="false"
-IS_MONGO_INITIALIZATION_ENABLED_BIORXIV="false"
-IS_MONGO_INITIALIZATION_ENABLED_GITHUB="false"
-IS_MONGO_INITIALIZATION_ENABLED_HABR="false"
-IS_MONGO_INITIALIZATION_ENABLED_MEDRXIV="false"
-IS_MONGO_INITIALIZATION_ENABLED_REDDIT="false"
-IS_MONGO_INITIALIZATION_ENABLED_TWITTER="false"
-
-IS_MONGO_WRITE_ERROR_LOGS_ENABLED="false"
-IS_MONGO_WRITE_ERROR_LOGS_ENABLED_PROVIDERS="false"
-IS_MONGO_WRITE_ERROR_LOGS_ENABLED_ARXIV="false"
-IS_MONGO_WRITE_ERROR_LOGS_ENABLED_BIORXIV="false"
-IS_MONGO_WRITE_ERROR_LOGS_ENABLED_GITHUB="false"
-IS_MONGO_WRITE_ERROR_LOGS_ENABLED_HABR="false"
-IS_MONGO_WRITE_ERROR_LOGS_ENABLED_MEDRXIV="false"
-IS_MONGO_WRITE_ERROR_LOGS_ENABLED_REDDIT="false"
-IS_MONGO_WRITE_ERROR_LOGS_ENABLED_TWITTER="false"
-
-IS_MONGO_CLEANING_WARNING_LOGS_DB_ENABLED="false"
-IS_MONGO_CLEANING_WARNING_LOGS_DB_ENABLED_PROVIDERS="false"
-IS_MONGO_CLEANING_WARNING_LOGS_DB_ENABLED_ARXIV="false"
-IS_MONGO_CLEANING_WARNING_LOGS_DB_ENABLED_BIORXIV="false"
-IS_MONGO_CLEANING_WARNING_LOGS_DB_ENABLED_GITHUB="false"
-IS_MONGO_CLEANING_WARNING_LOGS_DB_ENABLED_HABR="false"
-IS_MONGO_CLEANING_WARNING_LOGS_DB_ENABLED_MEDRXIV="false"
-IS_MONGO_CLEANING_WARNING_LOGS_DB_ENABLED_REDDIT="false"
-IS_MONGO_CLEANING_WARNING_LOGS_DB_ENABLED_TWITTER="false"
-
-IS_MONGO_CLEANING_WARNING_LOGS_DB_COLLECTIONS_ENABLED="false"
-IS_MONGO_CLEANING_WARNING_LOGS_DB_COLLECTIONS_ENABLED_PROVIDERS="false"
-IS_MONGO_CLEANING_WARNING_LOGS_DB_COLLECTIONS_ENABLED_ARXIV="false"
-IS_MONGO_CLEANING_WARNING_LOGS_DB_COLLECTIONS_ENABLED_BIORXIV="false"
-IS_MONGO_CLEANING_WARNING_LOGS_DB_COLLECTIONS_ENABLED_GITHUB="false"
-IS_MONGO_CLEANING_WARNING_LOGS_DB_COLLECTIONS_ENABLED_HABR="false"
-IS_MONGO_CLEANING_WARNING_LOGS_DB_COLLECTIONS_ENABLED_MEDRXIV="false"
-IS_MONGO_CLEANING_WARNING_LOGS_DB_COLLECTIONS_ENABLED_REDDIT="false"
-IS_MONGO_CLEANING_WARNING_LOGS_DB_COLLECTIONS_ENABLED_TWITTER="false"
-
-IS_MONGO_LINK_PARTS_RANDOMIZE_ORDER_ENABLED="false"
-IS_MONGO_LINK_PARTS_RANDOMIZE_ORDER_ENABLED_PROVIDERS="false"
-IS_MONGO_LINK_PARTS_RANDOMIZE_ORDER_ENABLED_ARXIV="false"
-IS_MONGO_LINK_PARTS_RANDOMIZE_ORDER_ENABLED_BIORXIV="false"
-IS_MONGO_LINK_PARTS_RANDOMIZE_ORDER_ENABLED_GITHUB="false"
-IS_MONGO_LINK_PARTS_RANDOMIZE_ORDER_ENABLED_HABR="false"
-IS_MONGO_LINK_PARTS_RANDOMIZE_ORDER_ENABLED_MEDRXIV="false"
-IS_MONGO_LINK_PARTS_RANDOMIZE_ORDER_ENABLED_REDDIT="false"
-IS_MONGO_LINK_PARTS_RANDOMIZE_ORDER_ENABLED_TWITTER="false"
-
-# example POSTGRES_FIRST_HANDLE_URL_PART&POSTGRES_LOGIN&POSTGRES_SECOND_HANDLE_URL_PART&POSTGRES_PASSWORD&POSTGRES_THIRD_HANDLE_URL_PART&POSTGRES_IP&POSTGRES_FOURTH_HANDLE_URL_PART&POSTGRES_PORT&POSTGRES_FIFTH_HANDLE_URL_PART&POSTGRES_DB [?paramspec]
-POSTGRES_FIRST_HANDLE_URL_PART="" #local "postgres://" cloud "postgres://"
-POSTGRES_SECOND_HANDLE_URL_PART="" #local ":" cloud ":"
-POSTGRES_THIRD_HANDLE_URL_PART="" #local "@" cloud "@"
+# example postgres://&POSTGRES_LOGIN:POSTGRES_PASSWORD&@POSTGRES_IP&POSTGRES_FOURTH_HANDLE_URL_PART&POSTGRES_PORT&POSTGRES_FIFTH_HANDLE_URL_PART&POSTGRES_DB [?paramspec]
 POSTGRES_FOURTH_HANDLE_URL_PART="" #local ":" cloud ""
 POSTGRES_FIFTH_HANDLE_URL_PART="" #local "/" cloud "/"
 POSTGRES_SIXTH_HANDLE_URL_PART="" #local "?" cloud "?" # empty if there are no params
@@ -98,86 +45,12 @@ DATABASE_URL=""
 
 POSTGRES_CONNECTION_TIMEOUT="0" #ms u64 2000
 
-IS_POSTGRES_INITIALIZATION_ENABLED="false"
-IS_POSTGRES_INITIALIZATION_ENABLED_PROVIDERS="false"
-IS_POSTGRES_INITIALIZATION_ENABLED_ARXIV="false"
-IS_POSTGRES_INITIALIZATION_ENABLED_BIORXIV="false"
-IS_POSTGRES_INITIALIZATION_ENABLED_GITHUB="false"
-IS_POSTGRES_INITIALIZATION_ENABLED_HABR="false"
-IS_POSTGRES_INITIALIZATION_ENABLED_MEDRXIV="false"
-IS_POSTGRES_INITIALIZATION_ENABLED_REDDIT="false"
-IS_POSTGRES_INITIALIZATION_ENABLED_TWITTER="false"
-
 WARNING_LOGS_DIRECTORY_NAME=""
 UNHANDLED_SUCCESS_HANDLED_SUCCESS_ARE_THERE_ITEMS_INITIALIZED_POSTS_DIR=""
 PATH_TO_PROVIDER_LINK_PARTS_FOLDER=""
 LOG_FILE_EXTENSION=""
 
-IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED="false"
-IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_PROVIDERS="false"
-IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_ARXIV="false"
-IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_BIORXIV="false"
-IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_GITHUB="false"
-IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_HABR="false"
-IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_MEDRXIV="false"
-IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_REDDIT="false"
-IS_WRITE_ERROR_LOGS_IN_LOCAL_FOLDER_ENABLED_TWITTER="false"
-
-IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED="false"
-IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED_PROVIDERS="false"
-IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED_ARXIV="false"
-IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED_BIORXIV="false"
-IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED_GITHUB="false"
-IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED_HABR="false"
-IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED_MEDRXIV="false"
-IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED_REDDIT="false"
-IS_CLEANING_WARNING_LOGS_DIRECTORY_ENABLED_TWITTER="false"
-
 STARTING_CHECK_LINK="" # https://www.google.com/
-CHECK_LINK_ARXIV="" # https://arxiv.org/   http://export.arxiv.org/rss/   http://export.arxiv.org/rss/astro-ph.CO
-CHECK_LINK_BIORXIV="" # http://connect.biorxiv.org/
-CHECK_LINK_GITHUB="" # https://github.com/
-CHECK_LINK_HABR="" # https://habr.com/ru/
-CHECK_LINK_MEDRXIV="" # http://connect.medrxiv.org/
-CHECK_LINK_REDDIT="" # https://www.reddit.com/
-CHECK_LINK_TWITTER="" # must be not only 1 str but many - twitter and many nitters
-
-IS_ENABLED_PROVIDERS="false"
-IS_ENABLED_ARXIV="false"
-IS_ENABLED_BIORXIV="false"
-IS_ENABLED_GITHUB="false"
-IS_ENABLED_HABR="false"
-IS_ENABLED_MEDRXIV="false"
-IS_ENABLED_REDDIT="false"
-IS_ENABLED_TWITTER="false"
-
-IS_DBS_INITIALIZATION_ENABLED="false"
-IS_DBS_INITIALIZATION_ENABLED_PROVIDERS="false"
-IS_DBS_INITIALIZATION_ENABLED_ARXIV="false"
-IS_DBS_INITIALIZATION_ENABLED_BIORXIV="false"
-IS_DBS_INITIALIZATION_ENABLED_GITHUB="false"
-IS_DBS_INITIALIZATION_ENABLED_HABR="false"
-IS_DBS_INITIALIZATION_ENABLED_MEDRXIV="false"
-IS_DBS_INITIALIZATION_ENABLED_REDDIT="false"
-IS_DBS_INITIALIZATION_ENABLED_TWITTER="false"
- 
-IS_LINKS_LIMIT_ENABLED_PROVIDERS="false"
-IS_LINKS_LIMIT_ENABLED_ARXIV="false"
-IS_LINKS_LIMIT_ENABLED_BIORXIV="false"
-IS_LINKS_LIMIT_ENABLED_GITHUB="false"
-IS_LINKS_LIMIT_ENABLED_HABR="false"
-IS_LINKS_LIMIT_ENABLED_MEDRXIV="false"
-IS_LINKS_LIMIT_ENABLED_REDDIT="false"
-IS_LINKS_LIMIT_ENABLED_TWITTER="false"
-
-LINKS_LIMIT_PROVIDERS="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_ARXIV="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_BIORXIV="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_GITHUB="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_HABR="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_MEDRXIV="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_REDDIT="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
-LINKS_LIMIT_TWITTER="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 
 IS_PREPARATION_ENABLED="false"
 TRACING_TYPE="error" # trace|debug|info|warn|error
