--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,55 +16,55 @@ actix-session = {version = "0.7.2", features = ["redis-rs-tls-session"]}
 actix-web = {version = "4.0.1"}
 actix-web-flash-messages = {version = "0.4.1", features = ["cookies"]}
 actix-web-lab = {version = "0.18.3"}
-ansi_term = {version = "0.12"}
-argon2 = {version = "0.4.0", features = ["std"]}
-base64 = {version = "0.21.0"}
-bytes = {version = "1.2.1"}
-chrono = {version = "0.4"}
-config = {version = "0.13.3"}
-convert_case = {version = "0.6.0"}
-dotenv = {version = "0.15.0"}
-env_logger = {version = "0.10.0"}
+ansi_term = {version = "=0.12"}
+argon2 = {version = "=0.4.0", features = ["std"]}
+base64 = {version = "=0.21.0"}
+bytes = {version = "=1.2.1"}
+chrono = {version = "=0.4"}
+config = {version = "=0.13.3"}
+convert_case = {version = "=0.6.0"}
+dotenv = {version = "=0.15.0"}
+env_logger = {version = "=0.10.0"}
 futures = {version = "0.3.5"}
-hex = {version = "0.4"}
-hmac = {version = "0.12", features = ["std"]}
-html_parser = {version ="0.6.2" }
-htmlescape = {version = "0.3"}
-http = {version = "0.2.8"}
-itertools = {version = "0.10.1"}
-mongodb = {version = "2.0.1"}
+hex = {version = "=0.4"}
+hmac = {version = "=0.12", features = ["std"]}
+html_parser = {version ="=0.6.2" }
+htmlescape = {version = "=0.3"}
+http = {version = "=0.2.8"}
+itertools = {version = "=0.10.1"}
+mongodb = {version = "=2.0.1"}
 num_cpus = {version = "1.0"}
-quickcheck = {version = "1.0.3"}
-quickcheck_macros = {version = "1.0.0"}
-rand = {version = "0.8", features = ["std_rng"]}
-regex = {version = "1.5"}
+quickcheck = {version = "=1.0.3"}
+quickcheck_macros = {version = "=1.0.0"}
+rand = {version = "=0.8", features = ["std_rng"]}
+regex = {version = "=1.5"}
 reqwest = {version = "0.11.0", default-features = false, features = ["json", "blocking", "rustls-tls", "cookies", "gzip", "brotli", "deflate", "trust-dns", "native-tls", "multipart", "stream", "cookies"]}
-secrecy = {version = "0.8", features = ["serde"]}
-serde = {version = "1.0", features = ["derive"]}
-serde-aux = {version = "4.0.0"}
-serde-xml-rs = {version = "0.6.0"}
-serde_derive = {version = "1.0"}
-serde_json = {version = "1.0"}
-sha2 = {version = "0.10"}
-sqlx = {version = "0.5", default-features = false, features = ["postgres", "runtime-actix-rustls", "macros", "uuid", "chrono", "migrate", "offline"]}#"runtime-tokio-native-tls", 
-strum = {version = "0.24.1"}
-strum_macros = {version = "0.24.3"}
-thiserror = {version = "1.0.30"}
-time = {version = "0.3.9"}
+secrecy = {version = "=0.8", features = ["serde"]}
+serde = {version = "=1.0", features = ["derive"]}
+serde-aux = {version = "=4.0.0"}
+serde-xml-rs = {version = "=0.6.0"}
+serde_derive = {version = "=1.0"}
+serde_json = {version = "=1.0"}
+sha2 = {version = "=0.10"}
+sqlx = {version = "=0.5", default-features = false, features = ["postgres", "runtime-actix-rustls", "macros", "uuid", "chrono", "migrate", "offline"]}#"runtime-tokio-native-tls", 
+strum = {version = "=0.24.1"}
+strum_macros = {version = "=0.24.3"}
+thiserror = {version = "=1.0.30"}
+time = {version = "=0.3.9"}
 tokio = {version = "1.7.1", features = ["macros"]}
-toml = {version = "0.5"}
-tracing = {version = "0.1", features = ["log", "valuable"]}
-tracing-actix-web = {version = "0.7.2"}
-tracing-bunyan-formatter = {version = "0.3"}
-tracing-log = {version = "0.1"}
-tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
-unicode-segmentation = {version = "1"}
-urlencoding = {version = "2"}
-uuid = {version = "0.8", features = ["v4", "serde"]}
-futures-util = {version = "0.3.28"}
+toml = {version = "=0.5"}
+tracing = {version = "=0.1", features = ["log", "valuable"]}
+tracing-actix-web = {version = "=0.7.2"}
+tracing-bunyan-formatter = {version = "=0.3"}
+tracing-log = {version = "=0.1"}
+tracing-subscriber = {version = "=0.3", features = ["registry", "env-filter"]}
+unicode-segmentation = {version = "=1"}
+urlencoding = {version = "=2"}
+uuid = {version = "=0.8", features = ["v4", "serde"]}
+futures-util = {version = "=0.3.28"}
 # uuid = {version = "1.2.2", features = ["v4", "serde"]}
-validator = {version = "0.16.0"}
-valuable = {version = "0.1.0", features = ["default", "std", "alloc", "derive", "valuable-derive"]}#maybe not all features needed
+validator = {version = "=0.16.0"}
+valuable = {version = "=0.1.0", features = ["default", "std", "alloc", "derive", "valuable-derive"]}#maybe not all features needed
 #
 # tufa_common = {git = "https://github.com/kuqmua/tufa_common"}# git version
 tufa_common = {path = "../tufa_common"}# local dev test without commits version
