--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ path = "src/main.rs"
 actix-cors = {version = "0.6.1"}
 actix-session = {version = "0.7.2", features = ["redis-rs-tls-session"]}
 actix-web = {version = "4.0.1"}
-actix-web-flash-messages = {version = "0.4.1", features = ["cookies"]}
+actix-web-flash-messages = {version = "=0.4.2", features = ["cookies"]}
 actix-web-lab = {version = "0.18.3"}
 ansi_term = {version = "=0.12"}
 argon2 = {version = "=0.4.0", features = ["std"]}
