--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ actix-cors = {version = "0.6.1"}
 actix-session = {version = "0.7.2", features = ["redis-rs-tls-session"]}
 actix-web = {version = "4.0.1"}
 actix-web-flash-messages = {version = "=0.4.2", features = ["cookies"]}
-actix-web-lab = {version = "0.18.3"}
+actix-web-lab = {version = "=0.19.1"}
 ansi_term = {version = "=0.12"}
 argon2 = {version = "=0.4.0", features = ["std"]}
 base64 = {version = "=0.21.0"}
