--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ name = "tufa_server"
 path = "src/main.rs"
 
 [dependencies]
-actix-cors = {version = "0.6.1"}
+actix-cors = {version = "=0.6.4"}
 actix-session = {version = "=0.7.2", features = ["redis-rs-tls-session"]}
 actix-web = {version = "4.0.1"}
 actix-web-flash-messages = {version = "=0.4.2", features = ["cookies"]}
