--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ config = {version = "=0.13.3"}
 convert_case = {version = "=0.6.0"}
 dotenv = {version = "=0.15.0"}
 env_logger = {version = "=0.10.0"}
-futures = {version = "0.3.5"}
+futures = {version = "=0.3.28"}
 hex = {version = "=0.4"}
 hmac = {version = "=0.12", features = ["std"]}
 html_parser = {version ="=0.6.2" }
